# itikz

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LuaLaTeX Sample.ipynb  LuaLaTeX_Sample.ipynb  Makefile  Quickstart.ipynb  README.rst  develop_Itikz_NiceMatrix.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_itikz_from_julia.ipynb  test_itikz_from_python.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
itikz/: __init__.py  nicematrix.py  nicematrix_dev.py  tikz.py
tests/: test_itikz.py
tmp/: essai-submatrix.tex
