[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itikz"
dynamic = ["version"]
description = "Cell magic for PGF/TikZ-to-SVG rendering in Jupyter"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "John Bjorn Nelson", email = "jbn@abreka.com" },
]
keywords = [
    "itikz",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
itikz = "itikz.cli:main"

[project.urls]
Homepage = "https://github.com/ea42gh/itikz"

[tool.hatch.version]
path = "itikz/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/itikz",
]
